# environment-parser

./: .gitignore  .pre-commit-config.yaml  README.md  azure-pipelines.yml  pyproject.toml  setup.py
adi_env_parser/: __init__.py  _parsers.py
adi_env_parser/test_data/: base.json
adi_env_parser/tests/: parser_test.py  test_parser.py
